Async blob delete process
